post evals commit'

--- a/package.json
+++ b/package.json
@@ -35,5 +35,19 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AdityaMishraOG/FarmTech.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/AdityaMishraOG/FarmTech/issues"
+  },
+  "homepage": "https://github.com/AdityaMishraOG/FarmTech#readme",
+  "description": ""
 }
